--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "description": "",
   "devDependencies": {
     "@types/node": "^22.14.1",
+    "@vitejs/plugin-react": "^4.4.0",
     "eslint": "^9.25.0",
     "prettier": "^3.5.3",
     "rimraf": "^5.0.10",
